wp-content/themes/uaessagroup-theme/src/output.css
/* ... */
@media (min-width: 768px){
  .container{
    max-width: 768px;
  }
}

@media (min-width: 1020px){
  .container{
    max-width: 1020px;
  }
}

@media (min-width: 1440px){
  .container{
    max-width: 1440px;
  }
}

.sr-only{
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.not-sr-only{
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}

.pointer-events-none{
  pointer-events: none;
}

.pointer-events-auto{
  pointer-events: auto;
}

.\!visible{
  visibility: visible !important;
}

.visible{
  visibility: visible;
}

.invisible{
  visibility: hidden;
}

.collapse{
  visibility: collapse;
}

.static{
  position: static;
}

.fixed{
  position: fixed;
}

.absolute{
  position: absolute;
}

.relative{
  position: relative;
}

.sticky{
  position: sticky;
}

.-inset-1{
  inset: -0.25rem;
}

.bottom-0{
  bottom: 0px;
}

.end-1{
  inset-inline-end: 0.25rem;
}

.left-1\/2{
  left: 50%;
}

.top-0{
  top: 0px;
}

.top-4{
  top: 1rem;
}

.isolate{
  isolation: isolate;
}

.isolation-auto{
  isolation: auto;
}

.z-10{
  z-index: 10;
}

.z-50{
  z-index: 50;
}

.z-auto{
  z-index: auto;
}

.col-span-4{
  grid-column: span 4 / span 4;
}

.col-start-2{
  grid-column-start: 2;
}

.float-start{
  float: inline-start;
}

.float-end{
  float: inline-end;
}

.float-right{
  float: right;
}

.float-left{
  float: left;
}

.float-none{
  float: none;
}

.clear-start{
  clear: inline-start;
}

.clear-end{
  clear: inline-end;
}

.clear-left{
  clear: left;
}

.clear-right{
  clear: right;
}

.clear-both{
  clear: both;
}

.clear-none{
  clear: none;
}

.mx-2{
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.mx-4{
  margin-left: 1rem;
  margin-right: 1rem;
}

.mx-auto{
  margin-left: auto;
  margin-right: auto;
}

.my-10{
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.my-2{
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.my-5{
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.-mt-0{
  margin-top: -0px;
}

.-mt-0\.5{
  margin-top: -0.125rem;
}

.mb-3{
  margin-bottom: 0.75rem;
}

.mb-4{
  margin-bottom: 1rem;
}

.mb-5{
  margin-bottom: 1.25rem;
}

.ml-2{
  margin-left: 0.5rem;
}

.ml-4{
  margin-left: 1rem;
}

.mr-12{
  margin-right: 3rem;
}

.mr-3{
  margin-right: 0.75rem;
}

.mr-5{
  margin-right: 1.25rem;
}

.mt-1{
  margin-top: 0.25rem;
}

.mt-10{
  margin-top: 2.5rem;
}

.mt-2{
  margin-top: 0.5rem;
}

.mt-3{
  margin-top: 0.75rem;
}

.mt-5{
  margin-top: 1.25rem;
}

.mt-8{
  margin-top: 2rem;
}

.box-border{
  box-sizing: border-box;
}

.box-content{
  box-sizing: content-box;
}

.line-clamp-2{
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

.line-clamp-3{
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.line-clamp-none{
  overflow: visible;
  display: block;
  -webkit-box-orient: horizontal;
  -webkit-line-clamp: none;
}

.block{
  display: block;
}

.inline-block{
  display: inline-block;
}

.inline{
  display: inline;
}

.flex{
  display: flex;
}

.inline-flex{
  display: inline-flex;
}

.table{
  display: table;
}

.inline-table{
  display: inline-table;
}

.table-caption{
  display: table-caption;
}

.table-cell{
  display: table-cell;
}

.table-column{
  display: table-column;
}

.table-column-group{
  display: table-column-group;
}

.table-footer-group{
  display: table-footer-group;
}

.table-header-group{
  display: table-header-group;
}

.table-row-group{
  display: table-row-group;
}

.table-row{
  display: table-row;
}

.flow-root{
  display: flow-root;
}

.grid{
  display: grid;
}

.inline-grid{
  display: inline-grid;
}

.contents{
  display: contents;
}

.list-item{
  display: list-item;
}

.hidden{
  display: none;
}

.aspect-square{
  aspect-ratio: 1 / 1;
}

.h-10{
  height: 2.5rem;
}

.h-14{
  height: 3.5rem;
}

.h-7{
  height: 1.75rem;
}

.h-8{
  height: 2rem;
}

.h-\[0\.18rem\]{
  height: 0.18rem;
}

.h-\[96px\]{
  height: 96px;
}

.h-screen{
  height: 100vh;
}

.max-h-0{
  max-height: 0px;
}

.max-h-12{
  max-height: 3rem;
}

.max-h-24{
  max-height: 6rem;
}

.max-h-32{
  max-height: 8rem;
}

.max-h-44{
  max-height: 11rem;
}

.max-h-80{
  max-height: 20rem;
}

.max-h-96{
  max-height: 24rem;
}

.max-h-screen{
  max-height: 100vh;
}

.min-h-96{
  min-height: 24rem;
}

.min-h-max{
  min-height: -moz-max-content;
  min-height: max-content;
}

.w-10{
  width: 2.5rem;
}

.w-44{
  width: 11rem;
}

.w-7{
  width: 1.75rem;
}

.w-8{
  width: 2rem;
}

.w-\[188px\]{
  width: 188px;
}

.w-\[201px\]{
  width: 201px;
}

.w-\[this-is\\\\\]{
  width: this-is\\;
}

.w-\[this-is\]{
  width: this-is;
}

.w-\[weird-and-invalid\]{
  width: weird-and-invalid;
}

.w-full{
  width: 100%;
}

.min-w-14{
  min-width: 3.5rem;
}

.max-w-max{
  max-width: -moz-max-content;
  max-width: max-content;
}

.flex-shrink{
  flex-shrink: 1;
}

.shrink{
  flex-shrink: 1;
}

.shrink-0{
  flex-shrink: 0;
}

.flex-grow{
  flex-grow: 1;
}

.grow{
  flex-grow: 1;
}

.table-auto{
  table-layout: auto;
}

.table-fixed{
  table-layout: fixed;
}

.caption-top{
  caption-side: top;
}

.caption-bottom{
  caption-side: bottom;
}

.border-collapse{
  border-collapse: collapse;
}

.border-separate{
  border-collapse: separate;
}

.origin-left{
  transform-origin: left;
}

.origin-top{
  transform-origin: top;
}

.-translate-x-1\/2{
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.rotate-180{
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

